RESOLVED FIXED191589
RTCPeerConnection.getTransceivers is not always exposing all transceivers
https://bugs.webkit.org/show_bug.cgi?id=191589
Summary RTCPeerConnection.getTransceivers is not always exposing all transceivers
youenn fablet
Reported 2018-11-13 09:10:52 PST
See imported/w3c/web-platform-tests/webrtc/RTCRtpTransceiver.https.html for one such case.
Attachments
Patch (13.84 KB, patch)
2018-11-13 09:13 PST, youenn fablet
no flags
Patch for landing (13.87 KB, patch)
2018-11-13 14:44 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-11-13 09:13:11 PST
Eric Carlson
Comment 2 2018-11-13 10:30:02 PST
Comment on attachment 354673 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354673&action=review > Source/WebCore/Modules/mediastream/RTCPeerConnection.h:136 > + const Vector<std::reference_wrapper<RTCRtpSender>>& getSenders() const; > + const Vector<std::reference_wrapper<RTCRtpReceiver>>& getReceivers() const; > + const Vector<RefPtr<RTCRtpTransceiver>>& getTransceivers() const; > + > + const Vector<std::reference_wrapper<RTCRtpSender>>& senders() const { return m_transceiverSet->senders(); } > + const Vector<RefPtr<RTCRtpTransceiver>>& transceivers() const { return m_transceiverSet->list(); } It isn't at all clear why we have both getSenders() and senders(), and getTransceivers() and transceivers(). Maybe "get" should be "collect", or "senders" should be "cachedSenders"?
youenn fablet
Comment 3 2018-11-13 11:09:01 PST
(In reply to Eric Carlson from comment #2) > Comment on attachment 354673 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=354673&action=review > > > Source/WebCore/Modules/mediastream/RTCPeerConnection.h:136 > > + const Vector<std::reference_wrapper<RTCRtpSender>>& getSenders() const; > > + const Vector<std::reference_wrapper<RTCRtpReceiver>>& getReceivers() const; > > + const Vector<RefPtr<RTCRtpTransceiver>>& getTransceivers() const; > > + > > + const Vector<std::reference_wrapper<RTCRtpSender>>& senders() const { return m_transceiverSet->senders(); } > > + const Vector<RefPtr<RTCRtpTransceiver>>& transceivers() const { return m_transceiverSet->list(); } > > It isn't at all clear why we have both getSenders() and senders(), and > getTransceivers() and transceivers(). Maybe "get" should be "collect", or > "senders" should be "cachedSenders"? Right, let's rename them currentSenders/Receivers/Transceivers.
youenn fablet
Comment 4 2018-11-13 14:37:14 PST
*** Bug 191588 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 5 2018-11-13 14:44:20 PST
Created attachment 354704 [details] Patch for landing
WebKit Commit Bot
Comment 6 2018-11-13 15:22:18 PST
Comment on attachment 354704 [details] Patch for landing Clearing flags on attachment: 354704 Committed r238150: <https://trac.webkit.org/changeset/238150>
WebKit Commit Bot
Comment 7 2018-11-13 15:22:20 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2018-11-13 15:23:58 PST
Note You need to log in before you can comment on or make changes to this bug.