RTCPeerConnection.getTransceivers is not always exposing all transceivers https://bugs.webkit.org/show_bug.cgi?id=191589

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/webrtc/RTCRtpTransceiver.https-expected.txt:

Source/WebCore:

Implement the collect transceiver algorithm using libwebrtc backend.
Call this algorithm everytime transceivers are retrieved from JS.
For Plan B, make this a no-op as this is not supported.
Introduce senders/receivers/transceivers getters where we just look at already created transceivers.

Covered by existing and rebased tests.

* Modules/mediastream/PeerConnectionBackend.h:
(WebCore::PeerConnectionBackend::collectTransceivers):
* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::getSenders const):
(WebCore::RTCPeerConnection::getReceivers const):
(WebCore::RTCPeerConnection::getTransceivers const):
* Modules/mediastream/RTCPeerConnection.h:
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::collectTransceivers):
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:
* Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.cpp:
(WebCore::LibWebRTCPeerConnectionBackend::addTrack):
(WebCore::LibWebRTCPeerConnectionBackend::existingTransceiver):
(WebCore::LibWebRTCPeerConnectionBackend::collectTransceivers):
(WebCore::LibWebRTCPeerConnectionBackend::applyRotationForOutgoingVideoSources):
(WebCore::LibWebRTCPeerConnectionBackend::shouldOfferAllowToReceive const):
* Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.h:


Canonical link: https://commits.webkit.org/206357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238150 268f45cc-cd09-0410-ab3c-d52691b4dbfc